--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 traffic-signs-data.zip filter=lfs diff=lfs merge=lfs -text
 traffic-signs-data/* filter=lfs diff=lfs merge=lfs -text
+web_images/ filter=lfs diff=lfs merge=lfs -text
